# seestar-mcp

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .release-it.json  CHANGELOG.md  Dockerfile  README.md  config.env.example  docker-compose.prod.yml  docker-compose.yml  jest.config.json  package.json  pyproject.toml
.github/ISSUE_TEMPLATE/: release_template.md
.github/workflows/: ci-cd.yml  release.yml
docs/: DOCKER.md  PRE_COMMIT_GUIDE.md  SETUP.md
mcp-tests/: README.md  debug-test.js  test-mcp-integration.js  test-mcp-integration.js.broken  test-simple-mcp.js  test-solar-system.js  test-working-mcp.js
src/seestar_mcp/: __init__.py  __main__.py  location_manager.py  models.py  server.py  target_resolver.py  telescope_client.py
tests/: conftest.py  test_models.py  test_server.py  test_target_resolver.py  test_telescope_client.py
